[package]
name = "AsyncChatApp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std="1"
tokio={version="1", features = ["sync"]}
serde={version = "1", features = ["derive", "rc"]}
serde_json = "1"